--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -33,20 +33,20 @@
   src: url('../assets/fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
 }
 
-// @font-face {
-//   font-family: "Roboto-Regular";
-//   src: url("/assets/fonts/Roboto/Roboto-Regular.ttf") format("truetype");
-// }
+@font-face {
+  font-family: 'MartelSans-Regular';
+  src: url('../assets/fonts/Martel_Sans/MartelSans-Regular.ttf') format('truetype');
+}
 
-// @font-face {
-//   font-family: "Roboto-Bold";
-//   src: url("/assets/fonts/Roboto/Roboto-Bold.ttf") format("truetype");
-// }
+@font-face {
+  font-family: 'MartelSans-Bold';
+  src: url('/assets/fonts/Martel_Sans/MartelSans-Bold.ttf') format('truetype');
+}
 
-// @font-face {
-//   font-family: "Roboto-Light";
-//   src: url("/assets/fonts/Roboto/Roboto-Light.ttf") format("truetype");
-// }
+@font-face {
+  font-family: 'MartelSans-Light';
+  src: url('/assets/fonts/Martel_Sans/MartelSans-Light.ttf') format('truetype');
+}
 
 // @font-face {
 //   font-family: "OpenSans-Regular";
