--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -3,6 +3,10 @@
 
   margin-top: 125px;
 
+  @include media-breakpoint-up(lg) {
+    margin-top: 100px;
+  }
+
   &__jumbo {
     width: 50%;
     @include media-breakpoint-down(md) {
