signin flow completed

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,6 @@
 $black: #000;
+$white: #fff;
 $grey: rgba(0, 0, 0, 0.6);
+$headingGrey: rgba(0, 0, 0, 0.87);
+$lightGrey: rgba(0, 0, 0, 0.54);
+$primaryBlue: rgba(38, 153, 251, 1);
