--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -17,6 +17,14 @@
   z-index: 3;
   line-height: 1;
   padding: 0 1px;
+  font-family: 'Montserrat-Regular';
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 900;
+}
+
+.has-float-label > input[type='text']:focus + span,
+.has-float-label > input[type='password']:focus + span {
+  color: rgba(38, 153, 251, 1);
 }
 
 .has-float-label label::after,
@@ -62,9 +70,9 @@
   opacity: 0;
 }
 .has-float-label .form-control:placeholder-shown:not(:focus) + * {
-  font-size: 150%;
-  opacity: 0.5;
-  top: 0.3em;
+  font-size: 100%;
+  opacity: 0.7;
+  top: 0.7em;
 }
 
 .input-group .has-float-label {
@@ -87,6 +95,7 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
+
 .input-group .has-float-label .form-control {
   width: 100%;
   border-radius: 0.25rem;
@@ -101,4 +110,19 @@
 .input-group .has-float-label:not(:first-child) .form-control {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
+}
+
+.has-float-label > input[type='text']:focus,
+.has-float-label > input[type='password']:focus {
+  border-color: rgba(38, 153, 251, 1);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
+  outline: 0 none;
+}
+
+.has-float-label > input[type='text'],
+.has-float-label > input[type='password'] {
+  border-color: rgba(0, 0, 0, 0.54);
+  border-radius: 5px;
+  color: rgba(0, 0, 0, 0.87);
+  font-family: 'Montserrat-SemiBold';
 }
