--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -34,6 +34,11 @@
 }
 
 @font-face {
+  font-family: 'Montserrat-Medium';
+  src: url('../assets/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+}
+
+@font-face {
   font-family: 'MartelSans-Regular';
   src: url('../assets/fonts/Martel_Sans/MartelSans-Regular.ttf') format('truetype');
 }
