initial login flow completed

--- a/src/Components/Login/PhoneNo/PhoneNo.scss
+++ b/src/Components/Login/PhoneNo/PhoneNo.scss
@@ -39,4 +39,15 @@
     top: 15%;
     right: 5%;
   }
+
+  &__forgot {
+    color: $primaryBlue;
+    font-family: 'Montserrat-Regular';
+    font-size: $spacer * 0.75;
+    letter-spacing: 0.4px;
+
+    @include media-breakpoint-up(md) {
+      font-size: $spacer;
+    }
+  }
 }
