--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,6 @@ $grey: rgba(0, 0, 0, 0.6);
 $headingGrey: rgba(0, 0, 0, 0.87);
 $lightGrey: rgba(0, 0, 0, 0.54);
 $primaryBlue: rgba(38, 153, 251, 1);
+$onlineGreen: #00ff00;
+$lighterGrey: rgba(236, 236, 236, 1);
+$chatDotsGrey: rgba(175, 175, 175, 1);
