UI fixes to chat functionality in login

--- a/src/Components/Common/OTPInput/OTPInput.scss
+++ b/src/Components/Common/OTPInput/OTPInput.scss
@@ -52,5 +52,6 @@
     border-radius: $spacer * 1.5;
     padding-left: $spacer * 2;
     padding-right: $spacer * 2;
+    margin-bottom: $spacer;
   }
 }
