--- a/src/Components/Login/AdmissionChat/AdmissionChat.scss
+++ b/src/Components/Login/AdmissionChat/AdmissionChat.scss
@@ -1,10 +1,13 @@
 .Admission {
   @import '../../../scss/bootstrap';
+  height: 100vh;
 
   &__nav {
     background-color: $primaryBlue;
-    position: relative;
-    height: 100vh;
+    position: fixed;
+    height: 15vh;
+    overflow-y: hidden;
+    width: 100%;
   }
 
   &__avatar {
@@ -30,11 +33,11 @@
 
   &__overlay {
     position: fixed;
-    top: $spacer * 5;
+    margin-top: $spacer * 5;
     left: 0;
     z-index: 10;
     width: 100%;
-    height: 90vh;
+    height: 95vh;
     background-color: $white;
     overflow: scroll;
     box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.16);
