--- a/src/Components/Login/AdmissionChat/Enquiry/Enquiry.scss
+++ b/src/Components/Login/AdmissionChat/Enquiry/Enquiry.scss
@@ -2,6 +2,16 @@
   @import '../../../../scss/bootstrap';
   background-color: $white;
   width: 100%;
+  padding-bottom: 125px;
+
+  &__folded {
+    position: fixed;
+    top: 5rem;
+    background-color: $white;
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+    z-index: 100;
+  }
 
   &__folded span {
     font-family: 'Montserrat-SemiBold';
@@ -10,13 +20,13 @@
     line-height: $spacer;
   }
 
-  &__blurb {
-    animation: scale-up-tl 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) forwards;
-  }
+  // &__blurb {
+  //   animation: scale-up-tl 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) forwards;
+  // }
 
-  &__rightBlurb {
-    animation: scale-up-tr 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  }
+  // &__rightBlurb {
+  //   animation: scale-up-tr 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  // }
 
   &__chatBox {
     background-color: $lighterGrey;
