--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -14,6 +14,21 @@
     }
   }
 
+  &__footer {
+    @include media-breakpoint-down(md) {
+      margin-top: 30vh;
+    }
+
+    @include media-breakpoint-up(md) {
+      position: absolute;
+      bottom: 30px;
+      width: 100%;
+      height: 80px;
+      padding-bottom: 30px;
+    }
+    text-align: center;
+  }
+
   &__footerText {
     font-family: 'Montserrat-Regular';
     font-size: $spacer * 0.75;
