--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -3,6 +3,7 @@
 // Project imports to be done here
 @import './variables';
 @import './fonts';
+@import './buttonStyles';
 
 // Mixins imports
 @import './mixins/transitions';
