--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,3 +7,10 @@ $primaryBlue: rgba(38, 153, 251, 1);
 $onlineGreen: #00ff00;
 $lighterGrey: rgba(236, 236, 236, 1);
 $chatDotsGrey: rgba(175, 175, 175, 1);
+$disabledBlue: #f1f9ff;
+$dashboardBackground: rgba(249, 253, 255, 1);
+$dashboardBlack: rgba(22, 22, 22, 1);
+$strongRed: rgba(255, 0, 0, 0.87);
+$dashboardGrey: rgba(112, 112, 112, 1);
+$lighterBlue: rgba(127, 196, 253, 1);
+$lightestBlue: rgba(188, 224, 253, 1);
