--- a/src/Components/Login/AdmissionChat/AdmissionForm/AdmissionForm.scss
+++ b/src/Components/Login/AdmissionChat/AdmissionForm/AdmissionForm.scss
@@ -5,7 +5,7 @@
     font-family: 'Montserrat-Regular';
   }
 
-  &__fileUpload > input {
+  &__fileUpload > label > input {
     display: none;
   }
 
