--- a/src/Components/Common/OTPInput/OTPInput.scss
+++ b/src/Components/Common/OTPInput/OTPInput.scss
@@ -24,7 +24,7 @@
   }
 
   &__resend {
-    color: $primaryBlue;
+    color: var(--primary-blue);
     font-family: 'Montserrat-Regular';
     font-size: $spacer * 0.75;
     letter-spacing: 0.3em;
@@ -46,7 +46,7 @@
   }
 
   .btn-custom {
-    background-color: $primaryBlue;
+    background-color: var(--primary-blue);
     color: $white;
     font-family: 'Montserrat-Medium';
     border-radius: $spacer * 1.5;
