--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -25,7 +25,7 @@
 .has-float-label > input[type='text']:focus + span,
 .has-float-label > input[type='password']:focus + span,
 .has-float-label > input[type='number']:focus + span {
-  color: rgba(38, 153, 251, 1);
+  color: var(--primary-blue);
 }
 
 .has-float-label label::after,
@@ -116,7 +116,7 @@
 .has-float-label > input[type='text']:focus,
 .has-float-label > input[type='password']:focus,
 .has-float-label > input[type='number']:focus {
-  border-color: rgba(38, 153, 251, 1);
+  border-color: var(--primary-blue);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
   outline: 0 none;
 }
