--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -71,7 +71,7 @@
   opacity: 0;
 }
 .has-float-label .form-control:placeholder-shown:not(:focus) + * {
-  font-size: 100%;
+  font-size: 14px;
   opacity: 0.7;
   top: 0.7em;
 }
@@ -128,4 +128,5 @@
   border-radius: 5px;
   color: rgba(0, 0, 0, 0.87);
   font-family: 'Montserrat-SemiBold';
+  height: 32px;
 }
