--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,5 +13,6 @@ $dashboardBackground: rgba(249, 253, 255, 1);
 $dashboardBlack: rgba(22, 22, 22, 1);
 $strongRed: rgba(255, 0, 0, 0.87);
 $dashboardGrey: rgba(112, 112, 112, 1);
+$dashboardGreyLight: rgba(112, 112, 112, 0.2);
 $lighterBlue: rgba(127, 196, 253, 1);
 $lightestBlue: rgba(188, 224, 253, 1);
