initial videoplayer done

--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -4,6 +4,7 @@
 @import './variables';
 @import './fonts';
 @import './buttonStyles';
+@import './rangeStyle.scss';
 
 // Mixins imports
 @import './mixins/transitions';
