--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -48,6 +48,10 @@
   padding-right: 20px;
 }
 
+.btn-dashboardBlueOnWhite:focus {
+  color: var(--lighter-blue);
+}
+
 .btn-noticeBoardPost {
   border-radius: 50px;
   border: 0.1px solid #707070;
