--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -89,3 +89,22 @@
   font-family: 'Montserrat-Regular';
   font-size: 14px;
 }
+
+.btn-boldText {
+  background-color: #fff;
+  color: var(--primary-blue);
+  border-radius: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-family: 'Montserrat-Bold';
+  font-size: 14px;
+}
+
+.btn-redBoldText {
+  background-color: #fff;
+  color: #ff0000;
+  border-radius: 50px;
+  padding: 0;
+  font-family: 'Montserrat-Bold';
+  font-size: 14px;
+}
