--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -100,6 +100,10 @@
   font-size: 14px;
 }
 
+.btn-boldText:hover {
+  color: var(--primary-blue);
+}
+
 .btn-redBoldText {
   background-color: #fff;
   color: #ff0000;
