--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,3 +17,11 @@ $dashboardGrey: rgba(112, 112, 112, 1);
 $dashboardGreyLight: rgba(112, 112, 112, 0.2);
 $lighterBlue: rgba(127, 196, 253, 1);
 $lightestBlue: rgba(188, 224, 253, 1);
+
+/*******************FONTS*********************/
+
+$regular: 'Montserrat-Regular';
+$medium: 'Montserrat-Medium';
+$semiBold: 'Montserrat-SemiBold';
+$bold: 'Montserrat-Bold';
+$light: 'Montserrat-Light';
