--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -3,8 +3,8 @@
   color: #fff;
   font-family: 'Montserrat-Regular';
   border-radius: 50px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .btn-customLightBlue {
@@ -30,8 +30,8 @@
   .btn-customSkip {
     height: 40px;
     font-size: 18px;
-    padding-right: 24px;
-    padding-left: 24px;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
 }
 
@@ -111,4 +111,57 @@
   padding: 0;
   font-family: 'Montserrat-Bold';
   font-size: 14px;
+}
+
+.btn-finishTest {
+  font-size: 14px;
+  font-family: 'Montserrat-Medium';
+  color: #fff;
+  background-color: var(--lighter-blue, rgba(127, 196, 253, 1));
+  height: 1.5rem;
+  width: 70px;
+  padding: 0;
+  border-radius: 5px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
+}
+
+.btn-testBlueOnWhite {
+  border: 0.5px solid $dashboardGrey;
+  border-radius: 15px;
+  height: 1.5rem;
+  width: 4.5rem;
+  margin: 0.5rem;
+  font-size: 0.75rem;
+  font-family: $regular;
+  padding: 0;
+}
+
+.active.btn-testBlueOnWhite {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+.btn-testPallette {
+  border: 0.5px solid $dashboardGrey;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 1.5rem;
+  padding: 0;
+  font-size: 0.75rem;
+  font-family: $regular;
+  margin: 0.5rem;
+}
+
+/**************************************Progress Bar Styles ********************************/
+
+.bg-testProgress {
+  height: 0.5rem;
+  background-color: var(--primary-blue);
+  border-radius: 5px;
+}
+.testerProgressBar {
+  width: 100%;
+  height: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.11);
+  border-radius: 5px;
 }
