--- a/src/Components/Common/QuestionTaker/QuestionTaker.scss
+++ b/src/Components/Common/QuestionTaker/QuestionTaker.scss
@@ -29,4 +29,59 @@
     letter-spacing: 0.37px;
     line-height: $spacer * 1.75;
   }
+
+  &__tick {
+    position: absolute;
+    top: 2px;
+    right: -3px;
+    color: $onlineGreen;
+  }
+
+  &__questionHeading {
+    font-size: $spacer;
+    font-family: $semiBold;
+    letter-spacing: 0.49px;
+    line-height: $spacer * 1.75;
+    color: $headingGrey;
+  }
+
+  &__questionOptions {
+    border-radius: 10px;
+    font-family: $medium;
+    color: $headingGrey;
+    font-size: $spacer;
+    letter-spacing: 0.49px;
+    line-height: $spacer * 1.75;
+  }
+
+  &__questionOptions > p {
+    margin: 0;
+  }
+
+  &__questionType {
+    font-size: $spacer * 0.625;
+    font-family: $regular;
+    line-height: 13px;
+    color: $dashboardBlack;
+  }
+
+  &__customRadio {
+    border: 1px solid $chatDotsGrey;
+    border-radius: 10px;
+
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+  }
+
+  &__focusedRadio {
+    border: 5px solid var(--primary-blue);
+  }
+}
+
+#testTick {
+  height: 10px;
+  width: 10px;
 }
