--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -162,6 +162,11 @@
   color: #fff;
 }
 
+.btn-redTest {
+  background-color: #ff0000;
+  color: #fff;
+}
+
 .btn-purpleGreenTest {
   background-color: #5e2d79;
   color: #fff;
