question taking module initial implementation complete

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,7 @@ $dashboardGrey: rgba(112, 112, 112, 1);
 $dashboardGreyLight: rgba(112, 112, 112, 0.2);
 $lighterBlue: rgba(127, 196, 253, 1);
 $lightestBlue: rgba(188, 224, 253, 1);
+$homeworkBlue: rgba(0, 102, 255, 0.87);
 
 /*******************FONTS*********************/
 
