--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,8 @@ $dashboardGreyLight: rgba(112, 112, 112, 0.2);
 $lighterBlue: rgba(127, 196, 253, 1);
 $lightestBlue: rgba(188, 224, 253, 1);
 $homeworkBlue: rgba(0, 102, 255, 0.87);
+$dialerBlack: rgba(33, 33, 33, 1);
+$feesGreen: rgba(58, 255, 0, 0.87);
 
 /*******************FONTS*********************/
 
