--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $grey: rgba(0, 0, 0, 0.6);
 $headingGrey: rgba(0, 0, 0, 0.87);
 $disabledGrey: rgba(0, 0, 0, 0.38);
+$lightestGrey: rgba(0, 0, 0, 0.06);
 $lightGrey: rgba(0, 0, 0, 0.54);
 $primaryBlue: rgba(38, 153, 251, 1);
 $onlineGreen: #00ff00;
