--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -124,6 +124,20 @@
   color: var(--primary-blue);
 }
 
+.btn-boldTextSecondary {
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.54);
+  border-radius: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-family: 'Montserrat-Bold';
+  font-size: 14px;
+}
+
+.btn-boldTextSecondary:hover {
+  color: var(--primary-blue);
+}
+
 .btn-redBoldText {
   background-color: #fff;
   color: #ff0000;
@@ -237,6 +251,16 @@
   border-radius: 14px;
   height: 28px;
   padding-left: 28px;
+}
+
+.btn-greenButtonLong {
+  background-color: rgba(37, 230, 0, 1);
+  border-radius: 5px;
+  width: 90%;
+  color: #fff;
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+  line-height: 18px;
 }
 
 /**************************************Progress Bar Styles ********************************/
