--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $lightGrey: rgba(0, 0, 0, 0.54);
 $primaryBlue: rgba(38, 153, 251, 1);
 $onlineGreen: #00ff00;
 $yellow: #ffff00;
+$dirtyYellow: rgba(251, 226, 68, 1);
 $lighterGrey: rgba(236, 236, 236, 1);
 $chatDotsGrey: rgba(175, 175, 175, 1);
 $disabledBlue: #f1f9ff;
