--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -37,14 +37,14 @@
     border-radius: 5px;
   }
 
-  &__playerWrapper {
-    position: relative;
-    padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
-  }
+  // &__playerWrapper {
+  //   position: relative;
+  //   padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+  // }
 
-  &__reactPlayer {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+  // &__reactPlayer {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  // }
 }
