--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -16,6 +16,17 @@
   font-size: 12px;
 }
 
+.btn-customPrimaryWithShadow {
+  background-color: var(--primary-blue, rgba(38, 153, 251, 1));
+  color: #fff;
+  font-family: 'Montserrat-Regular';
+  width: 9.375rem;
+  height: 2.25rem;
+  font-size: 0.875rem;
+  border-radius: 50px;
+  box-shadow: 0px 6px 10px 0px var(--lighter-blue);
+}
+
 .btn-customSecondary {
   background-color: #fff;
   color: var(--primary-blue);
@@ -70,6 +81,19 @@
 
 .btn-dashboardBlueOnWhite:focus {
   color: var(--lighter-blue);
+}
+
+.btn-courseBlueOnWhite {
+  border-radius: 5px;
+  background-color: #fff;
+  color: var(--primary-blue);
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+  line-height: 16px;
+  height: 28px;
+  width: 120px;
+  padding: 0 10px 0 10px;
 }
 
 .btn-noticeBoardPost {
