--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -15,27 +15,27 @@
 
 @font-face {
   font-family: 'Montserrat-Regular';
-  src: url('../assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/Montserrat-Regular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat-Light';
-  src: url('../assets/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/Montserrat-Light.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url('../assets/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/Montserrat-Bold.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat-SemiBold';
-  src: url('../assets/fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/Montserrat-SemiBold.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat-Medium';
-  src: url('../assets/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/Montserrat/Montserrat-Medium.woff') format('woff');
 }
 
 @font-face {
