partial fees module completed

--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -109,6 +109,19 @@
   padding: 0 10px 0 10px;
 }
 
+.btn-courseBlueOnWhiteSmol {
+  border-radius: 5px;
+  background-color: #fff;
+  color: var(--primary-blue);
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+  line-height: 16px;
+  height: 24px;
+  width: 70px;
+  padding: 0 10px 0 10px;
+}
+
 .btn-noticeBoardPost {
   border-radius: 50px;
   border: 0.1px solid #707070;
