--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -121,4 +121,27 @@
     letter-spacing: 2px;
     line-height: 28px;
   }
+
+  /****************Fee Cards*****************/
+
+  &__recentlyUsed{
+    font-size: $spacer * 0.875;
+    line-height: 20px;
+    color:$headingGrey;
+    font-family: $semiBold;
+  }
+
+  &__feeCardContent {
+    min-width: 116px;
+    margin: 5px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
+  }
+
+  &__feecardHeading{
+    font-size: $spacer*0.625;
+    line-height: 15px;
+    color: $dashboardBlack;
+    font-family: $semiBold;
+  }
+
 }
