--- a/src/Components/Analysis/Analysis.scss
+++ b/src/Components/Analysis/Analysis.scss
@@ -48,4 +48,40 @@
     font-size: $spacer * 0.625;
     color: $dashboardBlack;
   }
+
+  &__present {
+    background-color: rgba(58, 255, 0, 0.87) !important;
+    border-radius: 50%;
+    color: #fff;
+  }
+
+  &__leave {
+    background-color: rgba(112, 112, 112, 1) !important;
+    border-radius: 50%;
+    color: #fff;
+  }
+
+  &__absent {
+    background-color: rgba(255, 0, 0, 0.87) !important;
+    border-radius: 50%;
+    color: #fff;
+  }
+
+  &__testCardBigHeading {
+    font-family: $bold;
+    color: $lightGrey;
+    font-size: $spacer * 1.2;
+  }
+
+  &__testCardHeading {
+    font-family: $semiBold;
+    color: $lightGrey;
+    font-size: $spacer * 0.625;
+  }
+
+  &__testCardDetails {
+    font-family: $medium;
+    color: $dashboardBlack;
+    font-size: $spacer * 0.875;
+  }
 }
