--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,3 +4,11 @@
   --lightest-blue: rgba(188, 224, 253, 1);
   --superlight-blue: rgba(241, 249, 255, 1);
 }
+
+// .rootContainer {
+//   @import '../scss/bootstrap';
+
+//   @include media-breakpoint-up(lg) {
+//     width: 60%;
+//   }
+// }
