--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -39,6 +39,11 @@
 }
 
 @font-face {
+  font-family: 'Montserrat-ExtraBold';
+  src: url('../assets/fonts/Montserrat/Montserrat-ExtraBold.ttf') format('woff');
+}
+
+@font-face {
   font-family: 'MartelSans-Regular';
   src: url('../assets/fonts/Martel_Sans/MartelSans-Regular.ttf') format('truetype');
 }
