--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -30,3 +30,4 @@ $medium: 'Montserrat-Medium';
 $semiBold: 'Montserrat-SemiBold';
 $bold: 'Montserrat-Bold';
 $light: 'Montserrat-Light';
+$extraBold: 'Montserrat-ExtraBold';
