--- a/src/Components/Login/Welcome/Welcome.scss
+++ b/src/Components/Login/Welcome/Welcome.scss
@@ -174,9 +174,48 @@
     line-height: 29px;
     color: var(--primary-blue);
   }
+
+  &__carouselText {
+    font-size: $spacer * 1.25;
+    line-height: 24px;
+    font-family: $medium;
+    color: $black;
+  }
 }
 
 .carousel .slide {
   background: transparent !important;
   padding-bottom: 10px;
+}
+
+.swiper-container {
+  padding-bottom: 2rem !important;
+}
+
+.swiper-pagination-bullet {
+  color: #787878 !important;
+  background-color: #787878 !important;
+  margin-left: 25px !important;
+  margin-right: 25px !important;
+}
+
+.mySwiper > .swiper-pagination > .swiper-pagination-bullet-active {
+  width: 40px;
+  background-color: #000 !important;
+  border-radius: 50px;
+  animation-duration: 1s;
+  animation-name: slidein;
+}
+
+.mySwiper {
+  margin-top: 2rem;
+}
+
+@keyframes slidein {
+  0% {
+    width: 8px;
+  }
+  100% {
+    width: 40px;
+  }
 }
