--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -337,6 +337,34 @@
   box-shadow: none;
 }
 
+.btn-JumboLogin {
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
+  font-family: 'Montserrat-Medium';
+  height: 55px;
+  width: 236px;
+  position: fixed;
+  bottom: 30px;
+  background-color: var(--primary-blue);
+  box-shadow: 0px 6px 10px 0px var(--lighter-blue);
+  border-radius: 8000px;
+  left: 0;
+  right: 0;
+  margin: 5% auto;
+}
+
+.btn-loginPrimary {
+  background-color: var(--primary-blue);
+  box-shadow: 0px 6px 10px 0px var(--lighter-blue);
+  border-radius: 5px;
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+  line-height: 18px;
+  color: #fff;
+  width: 100%;
+}
+
 /**************************************Progress Bar Styles ********************************/
 
 .bg-testProgress {
