improved dasboard layout for student home screen

--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -30,10 +30,11 @@
   }
 
   &__todaysHitsText {
-    font-size: $spacer * 0.875;
+    font-size: x-large;
     font-family: 'Montserrat-SemiBold';
     color: $headingGrey;
     line-height: $spacer * 1.25;
+    padding-top: 15px;
   }
 
   &__innovation {
@@ -86,10 +87,11 @@
   }
 
   &__scrollableCardHeading {
-    font-size: $spacer * 0.75;
+    font-size: $spacer * 1;
     color: $headingGrey;
     line-height: $spacer * 1.25;
     font-family: 'Montserrat-SemiBold';
+    padding-bottom: 7px;
   }
 
   &__scrollableCardText {
@@ -105,7 +107,7 @@
   }
 
   &__attendanceSubHeading {
-    font-size: $spacer * 0.75;
+    font-size: $spacer * 0.925;
     font-family: 'Montserrat-Regular';
     line-height: 15px;
     color: $dashboardBlack;
@@ -132,7 +134,7 @@
   }
 
   &__noticeBoardText {
-    font-size: $spacer * 0.75;
+    font-size: large;
     color: $dashboardBlack;
     font-family: 'Montserrat-Medium';
   }
@@ -140,16 +142,19 @@
   &__notice {
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
     border-radius: 5px;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 10px;
   }
 
   &__noticeImage {
-    height: 38px;
-    width: 38px;
+    height: auto;
+    width: 50px;
     border-radius: 25px;
   }
 
   &__noticeSubHeading {
-    font-size: $spacer * 0.625;
+    font-size: $spacer * 0.825;
     font-family: 'Montserrat-Light';
     color: $headingGrey;
     line-height: 13px;
@@ -158,7 +163,7 @@
   &__noticeText {
     background-color: var(--lightest-blue);
     font-family: 'Montserrat-Medium';
-    font-size: $spacer * 0.75;
+    font-size: $spacer * 0.85;
     color: $headingGrey;
     border-radius: 0 0 5px 5px;
   }
@@ -169,3 +174,14 @@
     font-family: $bold;
   }
 }
+
+.noticeboard_img{
+  text-align: right;
+  padding-right: 30px;
+}
+.noticeboard_heading{
+  padding-top: 30px;
+}
+// .notice_content{
+//   padding-left: 30px;
+// }
