--- a/src/Components/Common/DashboardCards/DashboardCards.scss
+++ b/src/Components/Common/DashboardCards/DashboardCards.scss
@@ -10,4 +10,14 @@
     top: 15px;
     right: 5px;
   }
+
+
+}
+.DashboardCard_Image{
+text-align: right;
+padding-right: 30px;
+}
+.DashboardCard_heading{
+  font-size:x-large;
+  font-weight: 200;
 }
