created dynamic form with validation displaypage

--- a/src/Components/Live Classes/LiveClasses.scss
+++ b/src/Components/Live Classes/LiveClasses.scss
@@ -41,6 +41,8 @@
     font-family: 'Montserrat-Regular';
     color: $dashboardGrey;
     font-weight: 700;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__adminDuration > span {
