--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -41,6 +41,7 @@
   left: -0.2em;
   right: -0.2em;
   z-index: -1;
+  color: var(--primary-blue);
 }
 .has-float-label .form-control::-webkit-input-placeholder {
   opacity: 1;
